added Developed by

--- a/tournament/templates/tournament/manual_view.html
+++ b/tournament/templates/tournament/manual_view.html
@@ -116,6 +116,13 @@
             </tfoot>
         </table>
     </div>
+
+    <div class="text-center mt-5 opacity-75">
+        <p class="text-white small mb-0" style="letter-spacing: 0.5px;">
+            Designed & Developed by <span class="text-info fw-bold">Ashish Kamdar</span> 
+            <span class="text-white-50 ms-1">(Member- Matunga Gymkhana)</span>
+        </p>
+    </div>
 </div>
 
 <div class="qr-container d-flex align-items-center">
